--- a/tmpl/upload.html
+++ b/tmpl/upload.html
@@ -1,69 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="Quickly share large files with friends.">
-		<title>Hypershare | Quick file sharing</title>
-		<link rel="stylesheet" href="assets/css/pure.css">
-		<link rel="stylesheet" href="assets/css/side-menu.css">
-	</head>
-	<body>
-		<div id="layout">
-			<!-- Menu toggle -->
-			<a href="#menu" id="menuLink" class="pure-menu-link"><span></span> </a>
-			<div id="menu">
-				<div class="pure-menu pure-menu-open">
-					<a class="pure-menu-heading" href="/">Hypershare</a>
-					<ul>
-						<li>
-							<a href="#upload">Upload files</a>
-						</li>
-						
-						<li>
-							<a href="#faq">FAQ</a>
-						</li>
-						<li class="menu-item-divided">
-							<a href="/assets/uploads">Browse files</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-			<div id="main">
-				<div class="header">
-					<h1>Hypershare</h1>
-					<h2>Share large files with friends</h2>
-				</div>
-				<div class="content">
-					<h2 class="content-subhead" id="faq">How does it work?</h2>
-					<p>
-						Simply upload some files to Hypershare and share the download URL with your friends.
-						Files are automaticly removed after 7 days.
-					</p>
-					<h2 class="content-subhead">Is there a upload limit?</h2>
-					<p>
-						No, Maybe. We don't enforce a file size limit. We don't set limits on the actual file upload, there could however be a hardware limit which prevents very large file uploads.
-					</p>
-					<h2 class="content-subhead" id="upload">Upload</h2>
-					<form class="pure-form pure-form-stacked" method="post" action="/" enctype="multipart/form-data">
-						<fieldset>
-							<legend>
-								File upload
-							</legend>
-							
-							<input type="file" id="filesField" multiple="multiple">
-							<button type="submit" class="pure-button pure-button-primary">
-								Upload
-							</button>
-						</fieldset>
-					</form>
-				</div>
-			</div>
-		</div>
-		<script>
-			field = document.getElementById("filesField");
-			field.name = Math.random().toString(36).slice(2);
-		</script>
-		<script src="assets/js/ui.js"></script>
-	</body>
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Quickly share large files with friends.">
+    <title>Hypershare | Quick file sharing</title>
+    <link rel="stylesheet" href="assets/css/pure.css">
+    <link rel="stylesheet" href="assets/css/side-menu.css">
+</head>
+
+<script type="text/javascript">
+    function fieldChanged() {
+		alert("changed");
+        var input = document.getElementById("fileToUpload");
+        var ul = document.getElementById("fileList");
+        while (ul.hasChildNodes()) {
+            ul.removeChild(ul.firstChild);
+        }
+        for (var i = 0; i < input.files.length; i++) {
+            var li = document.createElement("li");
+            var i = document.createElement("i");
+
+            i.innerHTML = input.files[i].type;
+            li.innerHTML = input.files[i].name;
+
+            var fileSize = 0;
+            if (file.size > 1024 * 1024 * 1024)
+                fileSize = (Math.round(file.size * 100 / (1024 * 1024 * 1024)) / 100).toString() + 'GB';
+            else if (file.size > 1024 * 1024)
+                fileSize = (Math.round(file.size * 100 / (1024 * 1024)) / 100).toString() + 'MB';
+            else
+                fileSize = (Math.round(file.size * 100 / 1024) / 100).toString() + 'KB';
+
+            li.innerHTML = input.files[i].name + "(" + fileSize + ")" + i;
+            ul.appendChild(li);
+        }
+
+        if (!ul.hasChildNodes()) {
+            var li = document.createElement("li");
+            li.innerHTML = 'No Files Selected';
+            ul.appendChild(li);
+        }
+    }
+
+    function uploadFile() {
+		alert("upload click");
+        var fd = new FormData();
+        var fileCount = document.getElementById('fileToUpload').files.length;
+
+        for (var x = 0; x < fileCount; x++) {
+            fd.append("fileToUpload[]", document.getElementById('fileToUpload').files[x]);
+        }
+
+        var xhr = new XMLHttpRequest();
+        xhr.upload.addEventListener("progress", uploadProgress, false);
+        xhr.addEventListener("load", uploadComplete, false);
+        xhr.addEventListener("error", uploadFailed, false);
+        xhr.addEventListener("abort", uploadCanceled, false);
+        xhr.open("POST", "/");
+        xhr.send(fd);
+    }
+
+    function uploadProgress(evt) {
+        if (evt.lengthComputable) {
+            var percentComplete = Math.round(evt.loaded * 100 / evt.total);
+            document.getElementById('progressNumber').innerHTML = percentComplete.toString() + '%';
+        } else {
+            document.getElementById('progressNumber').innerHTML = 'unable to compute';
+        }
+    }
+
+    function uploadComplete(evt) {
+        /* This event is raised when the server send back a response */
+        alert(evt.target.responseText);
+    }
+
+    function uploadFailed(evt) {
+        alert("There was an error attempting to upload the file.");
+    }
+
+    function uploadCanceled(evt) {
+        alert("The upload has been canceled by the user or the browser dropped the connection.");
+    }
+</script>
+</head>
+
+<body>
+    <div id="layout">
+        <!-- Menu toggle -->
+        <a href="#menu" id="menuLink" class="pure-menu-link"><span></span> </a>
+        <div id="menu">
+            <div class="pure-menu pure-menu-open">
+                <a class="pure-menu-heading" href="/">Hypershare</a>
+                <ul>
+                    <li>
+                        <a href="#upload">Upload files</a>
+                    </li>
+
+                    <li>
+                        <a href="#faq">FAQ</a>
+                    </li>
+                    <li class="menu-item-divided">
+                        <a href="/assets/uploads">Browse files</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div id="main">
+            <div class="header">
+                <h1>Hypershare</h1>
+                <h2>Share large files with friends</h2>
+            </div>
+            <div class="content">
+                <h2 class="content-subhead" id="faq">How does it work?</h2>
+                <p>
+                    Simply upload some files to Hypershare and share the download URL with your friends. Files are automaticly removed after 7 days.
+                </p>
+                <h2 class="content-subhead">Is there a upload limit?</h2>
+                <p>
+                    No, Maybe. We don't enforce a file size limit. We don't set limits on the actual file upload, there could however be a hardware limit which prevents huge file uploads.
+                </p>
+                <h2 class="content-subhead" id="upload">Upload</h2>
+
+                <form class="pure-form pure-form-stacked" method="post" action="/" enctype="multipart/form-data">
+
+                    <fieldset>
+                        <legend>
+                            File upload
+                        </legend>
+
+                        <input type="file" id="fileToUpload" name="fileToUpload" multiple="multiple" onchange="fieldChanged();">
+                        <input type="button" onclick="uploadFile()" value="Upload" class="pure-button pure-button-primary" />
+                        <div id="progressNumber"></div>
+                    </fieldset>
+
+                    <fieldset>
+                        <legend>
+                            Selected files
+                        </legend>
+                        <ul id="fileList"></ul>
+                    </fieldset>
+                </form>
+            </div>
+        </div>
+    </div>
+    <script src="assets/js/ui.js"></script>
+</body>
 </html>
